--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mobx-react": "^9.1.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
