--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "dompurify": "^3.0.9",
     "jsonwebtoken": "^9.0.2",
     "mobx-react": "^9.1.0",
     "node-sass": "^9.0.0",
@@ -14,6 +15,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
